--- a/questions/templates/questions/detail_question_set.html
+++ b/questions/templates/questions/detail_question_set.html
@@ -2,166 +2,187 @@
 {% block title %}题单详情{% endblock %}
 
 {% block content %}
-<div class="max-w-6xl mx-auto mt-10 px-4">
-    <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">{{ question_set.name }}</h1>
-    <p class="text-center text-gray-600 mb-8">{{ question_set.description }}</p>
+    <div class="max-w-6xl mx-auto mt-10 px-4">
+        <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">{{ question_set.name }}</h1>
+        <p class="text-center text-gray-600 mb-8">{{ question_set.description }}</p>
 
-    <div class="bg-white shadow-md rounded-lg p-6 mb-6">
-        <h2 class="text-2xl font-semibold text-gray-700 mb-4">题单中的题目</h2>
-        <ul id="question-list" class="list-disc list-inside">
-            {% for question in question_set.questions.all %}
-            <li class="flex justify-between items-center mb-2">
-                <a href="{% url 'question_detail' question.id %}" class="text-blue-500 hover:text-blue-700">{{ question.title }}</a>
-                {% if request.user == question_set.creator %}
-                <button type="button" onclick="removeQuestion('{{ question_set.id }}', '{{ question.id }}')" class="text-red-500 hover:text-red-700 ml-2">删除</button>
-                {% endif %}
-            </li>
-            {% empty %}
-            <li>题单中没有题目。</li>
-            {% endfor %}
-        </ul>
-    </div>
-
-    <div class="flex justify-between">
-        <div class="bg-white shadow-md rounded-lg p-6 mb-6 w-full lg:w-1/2 mr-2">
-            <h2 class="text-2xl font-semibold text-gray-700 mb-4">题目搜索</h2>
-            <form method="get" action="{% url 'question_set_detail' question_set.id %}" class="flex mb-4">
-                <input type="text" name="query" placeholder="搜索题目" class="flex-grow border rounded-l px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
-                <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-r">搜索</button>
-            </form>
-            <h3 class="text-xl font-semibold text-gray-700 mt-4 mb-4">搜索结果</h3>
-            <form id="search-results-form" method="post" action="{% url 'add_question_to_set' question_set.id %}">
-                {% csrf_token %}
-                <ul>
-                    {% for question in search_results %}
-                    <li class="flex items-center mb-2">
-                        <input type="checkbox" name="question_ids" value="{{ question.id }}" class="mr-2">
-                        {{ question.title }}
+        <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+            <h2 class="text-2xl font-semibold text-gray-700 mb-4">题单中的题目</h2>
+            <ul id="question-list" class="list-disc list-inside">
+                {% for question in question_set.questions.all %}
+                    <li class="flex justify-between items-center mb-2">
+                        <a href="{% url 'question_detail' question.id %}"
+                           class="text-blue-500 hover:text-blue-700">{{ question.title }}</a>
+                        {% if request.user == question_set.creator %}
+                            <button type="button" onclick="removeQuestion('{{ question_set.id }}', '{{ question.id }}')"
+                                    class="text-red-500 hover:text-red-700 ml-2">删除
+                            </button>
+                        {% endif %}
                     </li>
-                    {% empty %}
-                    <li>没有找到题目。</li>
-                    {% endfor %}
-                </ul>
-                <button type="button" onclick="addQuestions('{{ question_set.id }}')" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded mt-4">添加选中的题目</button>
-            </form>
-        </div>
-
-        <div class="bg-white shadow-md rounded-lg p-6 mb-6 w-full lg:w-1/2">
-            <h2 class="text-2xl font-semibold text-gray-700 mb-4">题目选择</h2>
-            <form id="available-questions-form" method="post" action="{% url 'add_question_to_set' question_set.id %}">
-                {% csrf_token %}
-                <label for="available_questions" class="block text-gray-700 font-bold mb-2">选择题目：</label>
-                <select id="available_questions" name="question_ids" multiple class="form-multiselect block w-full mt-1 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
-                    {% for question in available_questions %}
-                    <option value="{{ question.id }}">{{ question.title }}</option>
-                    {% endfor %}
-                </select>
-                <button type="button" onclick="addQuestions('{{ question_set.id }}')" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded mt-4">添加选中的题目</button>
-            </form>
-        </div>
-    </div>
-
-    {% if request.user == question_set.creator %}
-    <div class="bg-white shadow-md rounded-lg p-6 mb-6">
-        <h2 class="text-2xl font-semibold text-gray-700 mb-4">共享题单</h2>
-        <form id="share-form" method="post" action="{% url 'share_question_set' question_set.id %}">
-            {% csrf_token %}
-            <label for="shared_groups" class="block text-gray-700 font-bold mb-2">共享给组：</label>
-            <select id="shared_groups" name="group_ids" multiple class="form-multiselect block w-full mt-1 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
-                {% for group in all_groups %}
-                <option value="{{ group.id }}" {% if group in question_set.shared_with_groups.all %}selected{% endif %}>{{ group.name }}{% if group in question_set.shared_with_groups.all %} (已共享){% endif %}</option>
+                {% empty %}
+                    <li>题单中没有题目。</li>
                 {% endfor %}
-            </select>
-            <div class="flex items-center mt-4">
-                <input type="checkbox" id="is_public" name="is_public" class="mr-2" {% if question_set.is_public %}checked{% endif %}>
-                <label for="is_public" class="text-gray-700">公开共享</label>
+            </ul>
+        </div>
+        {% if request.user == question_set.creator %}
+            <div class="flex justify-between">
+                <div class="bg-white shadow-md rounded-lg p-6 mb-6 w-full lg:w-1/2 mr-2">
+                    <h2 class="text-2xl font-semibold text-gray-700 mb-4">题目搜索</h2>
+                    <form method="get" action="{% url 'question_set_detail' question_set.id %}" class="flex mb-4">
+                        <input type="text" name="query" placeholder="搜索题目"
+                               class="flex-grow border rounded-l px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                        <button type="submit"
+                                class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-r">搜索
+                        </button>
+                    </form>
+                    <h3 class="text-xl font-semibold text-gray-700 mt-4 mb-4">搜索结果</h3>
+                    <form id="search-results-form" method="post"
+                          action="{% url 'add_question_to_set' question_set.id %}">
+                        {% csrf_token %}
+                        <ul>
+                            {% for question in search_results %}
+                                <li class="flex items-center mb-2">
+                                    <input type="checkbox" name="question_ids" value="{{ question.id }}" class="mr-2">
+                                    {{ question.title }}
+                                </li>
+                            {% empty %}
+                                <li>没有找到题目。</li>
+                            {% endfor %}
+                        </ul>
+                        <button type="button" onclick="addQuestions('{{ question_set.id }}')"
+                                class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded mt-4">
+                            添加选中的题目
+                        </button>
+                    </form>
+                </div>
+
+                <div class="bg-white shadow-md rounded-lg p-6 mb-6 w-full lg:w-1/2">
+                    <h2 class="text-2xl font-semibold text-gray-700 mb-4">题目选择</h2>
+                    <form id="available-questions-form" method="post"
+                          action="{% url 'add_question_to_set' question_set.id %}">
+                        {% csrf_token %}
+                        <label for="available_questions" class="block text-gray-700 font-bold mb-2">选择题目：</label>
+                        <select id="available_questions" name="question_ids" multiple
+                                class="form-multiselect block w-full mt-1 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                            {% for question in available_questions %}
+                                <option value="{{ question.id }}">{{ question.title }}</option>
+                            {% endfor %}
+                        </select>
+                        <button type="button" onclick="addQuestions('{{ question_set.id }}')"
+                                class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded mt-4">
+                            添加选中的题目
+                        </button>
+                    </form>
+                </div>
             </div>
-            <button type="button" onclick="shareQuestionSet('{{ question_set.id }}')" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mt-4">共享题单</button>
-        </form>
+
+            <div class="bg-white shadow-md rounded-lg p-6 mb-6">
+                <h2 class="text-2xl font-semibold text-gray-700 mb-4">共享题单</h2>
+                <form id="share-form" method="post" action="{% url 'share_question_set' question_set.id %}">
+                    {% csrf_token %}
+                    <label for="shared_groups" class="block text-gray-700 font-bold mb-2">共享给组：</label>
+                    <select id="shared_groups" name="group_ids" multiple
+                            class="form-multiselect block w-full mt-1 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                        {% for group in all_groups %}
+                            <option value="{{ group.id }}"
+                                    {% if group in question_set.shared_with_groups.all %}selected{% endif %}>
+                                {{ group.name }}{% if group in question_set.shared_with_groups.all %}
+                                    (已共享){% endif %}</option>
+                        {% endfor %}
+                    </select>
+                    <div class="flex items-center mt-4">
+                        <input type="checkbox" id="is_public" name="is_public" class="mr-2"
+                               {% if question_set.is_public %}checked{% endif %}>
+                        <label for="is_public" class="text-gray-700">公开共享</label>
+                    </div>
+                    <button type="button" onclick="shareQuestionSet('{{ question_set.id }}')"
+                            class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mt-4">共享题单
+                    </button>
+                </form>
+            </div>
+        {% endif %}
     </div>
-    {% endif %}
-</div>
 
-<script>
-    function addQuestions(questionSetId) {
-        const form1 = document.getElementById('search-results-form');
-        const form2 = document.getElementById('available-questions-form');
-        const formData1 = new FormData(form1);
-        const formData2 = new FormData(form2);
-        const formData = new FormData();
+    <script>
+        function addQuestions(questionSetId) {
+            const form1 = document.getElementById('search-results-form');
+            const form2 = document.getElementById('available-questions-form');
+            const formData1 = new FormData(form1);
+            const formData2 = new FormData(form2);
+            const formData = new FormData();
 
-        formData1.forEach((value, key) => {
-            formData.append(key, value);
-        });
-        formData2.forEach((value, key) => {
-            formData.append(key, value);
-        });
+            formData1.forEach((value, key) => {
+                formData.append(key, value);
+            });
+            formData2.forEach((value, key) => {
+                formData.append(key, value);
+            });
 
-        fetch(`/questions/add_question_to_set/${questionSetId}/`, {
-            method: 'POST',
-            body: formData,
-            headers: {
-                'X-Requested-With': 'XMLHttpRequest',
-                'X-CSRFToken': '{{ csrf_token }}'
-            }
-        })
-        .then(response => response.json())
-        .then(data => {
-            if (data.success) {
-                alert(data.message);
-                location.reload(); // 刷新页面以更新题目列表
-            } else {
-                alert(data.message);
-            }
-        })
-        .catch(error => console.error('Error:', error));
-    }
-
-    function removeQuestion(questionSetId, questionId) {
-        if (confirm('确定要从题单中删除这个问题吗？')) {
-            fetch(`/questions/remove_question_from_set/${questionSetId}/${questionId}/`, {
+            fetch(`/questions/add_question_to_set/${questionSetId}/`, {
                 method: 'POST',
+                body: formData,
                 headers: {
                     'X-Requested-With': 'XMLHttpRequest',
                     'X-CSRFToken': '{{ csrf_token }}'
                 }
             })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    alert(data.message);
-                    location.reload(); // 刷新页面以更新题目列表
-                } else {
-                    alert(data.message);
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        alert(data.message);
+                        location.reload(); // 刷新页面以更新题目列表
+                    } else {
+                        alert(data.message);
+                    }
+                })
+                .catch(error => console.error('Error:', error));
+        }
+
+        function removeQuestion(questionSetId, questionId) {
+            if (confirm('确定要从题单中删除这个问题吗？')) {
+                fetch(`/questions/remove_question_from_set/${questionSetId}/${questionId}/`, {
+                    method: 'POST',
+                    headers: {
+                        'X-Requested-With': 'XMLHttpRequest',
+                        'X-CSRFToken': '{{ csrf_token }}'
+                    }
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.success) {
+                            alert(data.message);
+                            location.reload(); // 刷新页面以更新题目列表
+                        } else {
+                            alert(data.message);
+                        }
+                    })
+                    .catch(error => console.error('Error:', error));
+            }
+        }
+
+        function shareQuestionSet(questionSetId) {
+            const form = document.getElementById('share-form');
+            const formData = new FormData(form);
+
+            fetch(`/questions/share_question_set/${questionSetId}/`, {
+                method: 'POST',
+                body: formData,
+                headers: {
+                    'X-Requested-With': 'XMLHttpRequest',
+                    'X-CSRFToken': '{{ csrf_token }}'
                 }
             })
-            .catch(error => console.error('Error:', error));
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        alert(data.message);
+                        location.reload(); // 刷新页面以更新题目列表
+                    } else {
+                        alert(data.message);
+                    }
+                })
+                .catch(error => console.error('Error:', error));
         }
-    }
-
-    function shareQuestionSet(questionSetId) {
-        const form = document.getElementById('share-form');
-        const formData = new FormData(form);
-
-        fetch(`/questions/share_question_set/${questionSetId}/`, {
-            method: 'POST',
-            body: formData,
-            headers: {
-                'X-Requested-With': 'XMLHttpRequest',
-                'X-CSRFToken': '{{ csrf_token }}'
-            }
-        })
-        .then(response => response.json())
-        .then(data => {
-            if (data.success) {
-                alert(data.message);
-                location.reload(); // 刷新页面以更新题目列表
-            } else {
-                alert(data.message);
-            }
-        })
-        .catch(error => console.error('Error:', error));
-    }
-</script>
+    </script>
 
 {% endblock %}
